@@ -60,20 +60,20 @@ public class ObjectSizeOfTest {
     @Test
     public void testNumbers() {
         assertEquals(16, ObjectSizeOf.Sizer.getObjectSize(Boolean.TRUE));
-        assertEquals(16, ObjectSizeOf.Sizer.getObjectSize(new Byte((byte) 1)));
-        assertEquals(16, ObjectSizeOf.Sizer.getObjectSize(new Character((char) 1)));
-        assertEquals(16, ObjectSizeOf.Sizer.getObjectSize(new Short((short) 1)));
+        assertEquals(16, ObjectSizeOf.Sizer.getObjectSize(Byte.valueOf((byte) 1)));
+        assertEquals(16, ObjectSizeOf.Sizer.getObjectSize(Character.valueOf((char) 1)));
+        assertEquals(16, ObjectSizeOf.Sizer.getObjectSize(Short.valueOf((short) 1)));
         assertEquals(16, ObjectSizeOf.Sizer.getObjectSize(1));
-        assertEquals(16, ObjectSizeOf.Sizer.getObjectSize(new Float(1)));
-        assertEquals(16, ObjectSizeOf.Sizer.getObjectSize(new Long(1)));
-        assertEquals(16, ObjectSizeOf.Sizer.getObjectSize(new Double(1)));
+        assertEquals(16, ObjectSizeOf.Sizer.getObjectSize(Float.valueOf(1)));
+        assertEquals(16, ObjectSizeOf.Sizer.getObjectSize(Long.valueOf(1)));
+        assertEquals(16, ObjectSizeOf.Sizer.getObjectSize(Double.valueOf(1)));
     }
 
     @Test
     public void testObjects() {
         List<Object> list = new ArrayList<Object>(10);
-        list.add(new Long(1));
-        list.add(new Double(1));
+        list.add(Long.valueOf(1));
+        list.add(Double.valueOf(1));
         int overhead = 8;
         int arrayoverhead = 12;
         int reference = 4;
